src/objects/Receipt__c.object
<CustomObject>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReceiptAmount__c</fullName>
        <label>Receipt Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ReceiptDateTime__c</fullName>
        <label>Receipt Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TransactionRef__c</fullName>
        <externalId>true</externalId>
        <label>Transaction Ref</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Receipt</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RCPT-{00000000}</displayFormat>
        <label>Receipt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>